@@ -1,8 +1,10 @@
 package org.example;
 
-import org.example.ClientDAO.ClientDAO;
+import org.example.CRUDServices.ClientCrudService;
+import org.example.CRUDServices.PlanetCrudService;
+import org.example.ClientDAO.ClientDAOService;
 import org.example.DBConnection.DatabaseConnectoin;
-import org.example.PlanetDAO.PlanetDAO;
+import org.example.PlanetDAO.PlanetDAOService;
 import org.example.entity.Client;
 import org.example.entity.Planet;
 
@@ -13,16 +15,15 @@ public class Main{
     static void main(String[] args) {
         DatabaseConnectoin dbc = DatabaseConnectoin.getInstance();
 
-        PlanetDAO planetDAO = new PlanetDAO();
-        ClientDAO clientDAO =new ClientDAO();
+        PlanetCrudService planetCrud = new PlanetCrudService();
+        ClientCrudService clientCrud = new ClientCrudService();
 
         //тестування Planet
         Planet somePlanet = null;
-        List<Planet> allPlanets = null;
-        if (planetDAO.createPlanet("SATURM", "saturm")){
-            allPlanets = planetDAO.getAllPlanets();
+        List<Planet> allPlanets = planetCrud.getAllPlanets();
+        if (planetCrud.createPlanet("SATURM", "saturm")){
             if(!allPlanets.isEmpty()) {
-                somePlanet = planetDAO.getPlanet(allPlanets.get(allPlanets.size() - 1).getId());
+                somePlanet = planetCrud.getPlanet(allPlanets.getLast().getId());
                 System.out.println(somePlanet.toString());
             }
         }
@@ -30,18 +31,18 @@ public class Main{
         if(!allPlanets.isEmpty() && allPlanets != null) {
             allPlanets.forEach(p -> System.out.println(p.toString()));
         }
-        if (planetDAO.updatePlanet("SATURM", "SATURM_SATURM")){
-            allPlanets = planetDAO.getAllPlanets();
+        if (planetCrud.updatePlanet("SATURM", "SATURM_SATURM")){
+            allPlanets = planetCrud.getAllPlanets();
             if(!allPlanets.isEmpty()) {
                 System.out.println("++++++++++++++++++++++++++");
-                somePlanet = planetDAO.getPlanet(allPlanets.get(allPlanets.size() - 1).getId());
+                somePlanet = planetCrud.getPlanet(allPlanets.get(allPlanets.size() - 1).getId());
                 System.out.println(somePlanet.toString());
                 System.out.println("++++++++++++++++++++++++++");
             }
         }
         System.out.println("--------------------------------");
-        if(planetDAO.deletePlanet("SATURM")){
-            allPlanets = planetDAO.getAllPlanets();
+        if(planetCrud.deletePlanet("SATURM")){
+            allPlanets = planetCrud.getAllPlanets();
             if(!allPlanets.isEmpty()) {
                 allPlanets.forEach(p -> System.out.println(p.toString()));
             }
@@ -51,28 +52,28 @@ public class Main{
 
         //тестування Client
         Client someClient = null;
-        List<Client> allClients = null;
-        if(clientDAO.createClient("Josephine Jackson")){
-            allClients = clientDAO.getAllClients();
+        List<Client> allClients = clientCrud.getAllClients();
+        if(clientCrud.createClient("Josephine Jackson")){
             if(!allClients.isEmpty()) {
-                someClient = clientDAO.getClient(allClients.get(allClients.size() - 1).getId());
+                allClients = clientCrud.getAllClients();
+                someClient = clientCrud.getClient(allClients.getLast().getId());
                 System.out.println(someClient.toString());
             }
         }
         System.out.println("--------------------------------");
         allClients.forEach(c -> System.out.println(c.toString()));
-        if (clientDAO.updateClient(allClients.get(allClients.size() - 1).getId(), "JOSEPHINE JACKSON")){
+        if (clientCrud.updateClient(allClients.get(allClients.size() - 1).getId(), "JOSEPHINE JACKSON")){
             System.out.println("++++++++++++++++++++++++++");
-            allClients = clientDAO.getAllClients();
+            allClients = clientCrud.getAllClients();
             if(!allClients.isEmpty()) {
-                someClient = clientDAO.getClient(allClients.get(allClients.size() - 1).getId());
+                someClient = clientCrud.getClient(allClients.get(allClients.size() - 1).getId());
                 System.out.println(someClient.toString());
             }
             System.out.println("++++++++++++++++++++++++++");
         }
         System.out.println("--------------------------------");
-        if (clientDAO.deleteClient(allClients.get(allClients.size() - 1).getId())){
-            allClients = clientDAO.getAllClients();
+        if (clientCrud.deleteClient(allClients.get(allClients.size() - 1).getId())){
+            allClients = clientCrud.getAllClients();
             if(!allClients.isEmpty()) {
                 allClients.forEach(c -> System.out.println(c.toString()));
             }
